--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ionic/react": "^7.1.3",
     "@mui/icons-material": "^5.14.0",
     "@mui/material": "^5.14.0",
+    "framer-motion": "^10.15.1",
     "google-maps-react": "^2.0.6",
     "ionicons": "^7.1.2",
     "moment": "^2.29.4",
@@ -25,6 +26,8 @@
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.15.0",
     "styled-components": "^6.0.4",
     "tailwind-scrollbar": "^3.0.4"
   },
